fix: Update react-router-dom

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Jia's Portfolio Website."
-    />
+    <meta name="title" content="Jia Song | Front end developer" />
     <meta name="keyword" content="front end developer portfolio, sydney web developer, sydney front end developer">
     <title>Jia Song | Front-end Developer</title>
   </head>
