docs: Update experiences

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="title" content="Jia Song | Front end developer" />
     <meta name="keyword" content="front end developer portfolio, sydney web developer, sydney front end developer">
-    <title>Jia Song | Full-Stack Dev</title>
+    <title>Jia Song | Software engineer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
